# NewsSentimentAnalyzerProject

./: .gitignore  README-News Sentiment Analysis Flowchart-1.eraserdiagram  README-News Sentiment Analysis Logical Architecture-1.eraserdiagram  README.md  logging_config.yaml  main.py  pyproject.toml  pytest.ini
newssentimentanalyze/: news_sentiment_analyze.py
src/news_sentiment_analyzer/: __init__.py  news_sentiment_analyzer.py  rss_news_scraper.py  sentiment_analyzer.py
tests/: test_news_sentiment_analyzer.py  test_nyt_rss_news_scraper.py  test_rss_news_scraper.py  test_rss_news_scraper_simple.py  test_sentiment_analyzer.py
